fix logo-show z-index

--- a/app/assets/stylesheets/slider_style.css
+++ b/app/assets/stylesheets/slider_style.css
@@ -191,6 +191,7 @@ font-weight:lighter;
 		height: auto;
 		width: auto;
 		text-align: center;
+		z-index: 100;
 	}
 	.rslides {
 	  margin: 0;
